fix header overflowing container on mobile

--- a/src/styles/layouts/profile_layout.module.sass
+++ b/src/styles/layouts/profile_layout.module.sass
@@ -36,7 +36,7 @@
       margin: auto
       margin-bottom: 1.5rem
       padding: 1rem
-      max-width: 900px
+      max-width: 1000px
 
       .avatar-img
         position: absolute
@@ -94,4 +94,28 @@
     .private-msg
       font-size: 1rem
       font-weight: 600
+
+@media (max-width: 800px)
+  .container
+    .profile-header
+      .header-img
+        height: 10rem
+
+      .profile-info
+        .avatar-img
+          top: -100px
+          left: 0
+          right: 0
+          margin: auto
+
+        .user
+          margin: auto
+          margin-top: 90px
+          width: fit-content
+
+          .user-data
+            text-align: center
+
+            h1
+              font-size: 1.5rem
         
